k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: students-getbyid-service
spec:
  selector:
    app: students-getbyid
  ports:
    - protocol: TCP
      port: 8085  # Puerto interno dentro del cluster
      targetPort: 8080 # Puerto que expone el contenedor
      nodePort: 30085
  type: NodePort
