k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: students-getbyid-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /students/{id}
        pathType: Prefix
        backend:
          service:
            name: students-getbyid-service
            port:
              number: 8080
